--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Welcome To Typing Speed Test</h1>
             <h2 id="msg"></h2>
             <br>
-            <textarea id="mywork" cols="100" rows="10" placeholder="Eneter Your Text Here..."></textarea>
+            <textarea id="mywork" cols="100" rows="10" placeholder="Enter Your Text Here..."></textarea>
             <br>
             <button id="btn" class="mainbtn">Start</button>
         </div>
